fix build issues, migration orders, docker configs