@@ -23,5 +23,4 @@ CMD ["java", \
      "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", \
      "--add-opens", "java.base/java.nio=ALL-UNNAMED", \
      "-XX:+UseZGC", \
-     "-XX:+ZGenerational", \
      "-jar", "app.jar"]
